Fixed sticky nav-bar and made download go to bottom on mobile

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -27,7 +27,6 @@ body
 		background-color: white
 		+box-shadow(0px, 2.5px, 5px, 0px, 0.25)
 		text-align: center
-		position: relative
 		ul
 			list-style-type: none
 			+flush()
@@ -42,12 +41,18 @@ body
 					p
 						font-size: 1em
 		.mdl-button--fab
-			position: absolute
-			top: calc(100% - 28px)
+			z-index: 100
 			+respond-to(screen)
+				position: absolute
+				top: calc(100% - 28px)
 				right: calc(12.5% + 0.5em)
 			+respond-to(handhelds)
+				position: fixed
+				bottom: 0.5em
 				right: 0.5em
+
+.relative
+	position: relative
 
 .sticky
 	position: fixed
